<resources>
    <string name="app_name">Mobile Inventory</string>
    <string name="random_scan_button_text">Random Scan</string>
    <string name="menu_description">Item Menu</string>
    <string name="clear_inventory">Clear inventory</string>
    <string name="remove_item_title">Remove item</string>
    <string name="view_pictures">View pictures</string>
    <string name="take_picture">Take a picture</string>
    <string name="save_to_file_title">Save to file</string>
    <string name="switch_to_preload_title">Switch to preload</string>
    <string name="switch_to_inventory">Switch to inventory</string>
    <string name="last_scan_title_string">Last scan:</string>
    <string name="current_location_title_string">Current location:</string>
    <string name="total_items_title_string">Items:</string>
    <string name="total_containers_title_string">Containers:</string>
    <string name="cancel_save_title">Cancel save</string>
    <string name="inventory_barcodes_column_title">Barcode</string>
    <string name="inventory_location_column_title">Location</string>
    <string name="total_locations_title_string">Locations:</string>
    <string name="continuous_mode_title">Continuous mode</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
</resources>
