<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preload_locations_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.porterlee.mobileinventory.MainActivity">

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="2dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
            android:id="@+id/progress_saving"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:max="320"
            app:mpb_useIntrinsicPadding="false"
            app:mpb_progressStyle="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_scan_title_string"
                android:paddingEnd="8dp"
                android:textSize="17sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="#FFFFFF"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/last_scan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total_locations_title_string"
                android:paddingEnd="8dp"
                android:textSize="17sp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="#FFFFFF"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:id="@+id/total_locations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_weight="1"
                android:gravity="start"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inventory_column_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:background="#DF3F51B5"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/info_layout">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/inventory_location_column_title"
            android:layout_marginEnd="37dp"
            android:textSize="15sp"
            android:textColor="#7FFFFFFF"
            android:gravity="center"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/location_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="50dp"
        android:clipToPadding="false"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_constraintTop_toBottomOf="@+id/inventory_column_labels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/random_scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Random Scan"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/location_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
